src/objects/Lottery_Member__c.object
<CustomObject>
    <description>Lotttery Members. Will ultimately be a join of contacts and listings but initially it will just be a child of listings with information about the lottery results.</description>
    <fields>
        <fullName>Listing__c</fullName>
        <description>Listing which the lottery member is in.</description>
        <inlineHelpText>Listing which the lottery member is in.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Lottery Members</relationshipLabel>
        <relationshipName>Lottery_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lottery_Number__c</fullName>
        <description>Lottery Number for the Specific Lottery Member.</description>
        <inlineHelpText>Lottery Number for the Specific Lottery Member.</inlineHelpText>
        <label>Lottery Number</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank of the Lottery Member in the Lottery Results</description>
        <inlineHelpText>Rank of the Lottery Member in the Lottery Results</inlineHelpText>
        <label>Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Lottery Member for the given Lottery</description>
        <inlineHelpText>Status of the Lottery Member for the given Lottery</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Lottery</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Winner</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lottery Member</label>
    <nameField>
        <displayFormat>LMN-{0000000}</displayFormat>
        <label>Lottery Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lottery Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>